--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.1.0+1
 homepage: https://github.com/kechankrisna/flutter_usb_printer
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0"
+  sdk: ">=3.0.3 <4.0.0"
 
 dependencies:
   flutter:
